# ChangeLog for sys-libs/ncurses
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.138 2007/04/10 05:26:01 jer Exp $

  10 Apr 2007; Jeroen Roovers <jer@gentoo.org> ncurses-5.6.ebuild:
  Stable for HPPA (bug #173728).

  09 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> ncurses-5.6.ebuild:
  Stable on Alpha, bug 173728.

  09 Apr 2007; nixnut <nixnut@gentoo.org> ncurses-5.6.ebuild:
  Stable on ppc wrt bug 173728

  09 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> ncurses-5.6.ebuild:
  Stable on sparc wrt #173728

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> ncurses-5.6.ebuild:
  Stable on ppc64; bug #173728

  08 Apr 2007; Christian Faulhammer <opfer@gentoo.org> ncurses-5.6.ebuild:
  stable x86/amd64, bug 173728

*ncurses-5.6-r1 (08 Apr 2007)

  08 Apr 2007; Mike Frysinger <vapier@gentoo.org> +ncurses-5.6-r1.ebuild:
  Include coverity fixes from upstream.

  21 Feb 2007; Mike Frysinger <vapier@gentoo.org> ncurses-5.4-r6.ebuild,
  ncurses-5.5-r3.ebuild, ncurses-5.6.ebuild:
  Preserve libncursesw.so.5 when building with USE=-unicode #106820 by Harald
  van Dijk.

*ncurses-5.6 (17 Jan 2007)

  17 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/ncurses-5.6-gfbsd.patch, +ncurses-5.6.ebuild:
  Version bump #162561 by Michael Cramer.

  16 Jan 2007; Mike Frysinger <vapier@gentoo.org> ncurses-5.5-r3.ebuild:
  Dont compress manpages #162396 by Michael Cramer.

  28 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/ncurses-5.5-gfbsd.patch:
  Make sure also DragonFly get the configure changed for ELF linkage, thanks
  to Robert Sebastian Gerus for reporting.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> ncurses-5.5-r3.ebuild:
  Added ~sparc-fbsd keyword.

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> ncurses-5.5-r3.ebuild:
  Stable on alpha as per bug #149048

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> ncurses-5.5-r3.ebuild: