@@ -25,14 +25,10 @@ EBUILD ncurses-5.6-r1.ebuild 4726 RMD160 9eee1597fa5ddb62e0e11697c7cbfc65a1f4b5b
 MD5 9e60b5b5fc150f024a0cf997102aa8db ncurses-5.6-r1.ebuild 4726
 RMD160 9eee1597fa5ddb62e0e11697c7cbfc65a1f4b5bc ncurses-5.6-r1.ebuild 4726
 SHA256 faea33536f424d4e58a0700976f7dc257e427d26593ad014d2fbe4584edc9e82 ncurses-5.6-r1.ebuild 4726
-EBUILD ncurses-5.6.ebuild 4653 RMD160 657f56cff68accc3d45f45d31b1b6c19f256dbdd SHA1 8a72c565c526032d08097ae1c3c9ff21685782aa SHA256 b6febd34efbda5d20ec2f0f97ea4c265a6ade407e57c2a3b3e996752c0934bfd
-MD5 386c6f0058168eab80cd02477cd07282 ncurses-5.6.ebuild 4653
-RMD160 657f56cff68accc3d45f45d31b1b6c19f256dbdd ncurses-5.6.ebuild 4653
-SHA256 b6febd34efbda5d20ec2f0f97ea4c265a6ade407e57c2a3b3e996752c0934bfd ncurses-5.6.ebuild 4653
-MISC ChangeLog 20328 RMD160 b08975ce71715a0bcbd69da802141cc54dbe65e5 SHA1 4af2df692a4a27864ff3c87b030a55b3486b42ec SHA256 f7b5c7bb3b438c2e4d24e1d1b6c7fc4c528ece48123973a62d2f1a34efb0bcf9
-MD5 414ebd9cfc9c5eab144d3cd4c1f0cd8f ChangeLog 20328
-RMD160 b08975ce71715a0bcbd69da802141cc54dbe65e5 ChangeLog 20328
-SHA256 f7b5c7bb3b438c2e4d24e1d1b6c7fc4c528ece48123973a62d2f1a34efb0bcf9 ChangeLog 20328
+MISC ChangeLog 20435 RMD160 f918f0d9d50ba3f88556350bca35069cc07780c5 SHA1 40c6aa741fae59123680a2b585b9f01ed06070d5 SHA256 9c766ef4b41a7e064e25e927cd42bbc96ef0cd54ebffa3279749a360dab4cdee
+MD5 6630ec9b6396b39d6b190cd33700ed6f ChangeLog 20435
+RMD160 f918f0d9d50ba3f88556350bca35069cc07780c5 ChangeLog 20435
+SHA256 9c766ef4b41a7e064e25e927cd42bbc96ef0cd54ebffa3279749a360dab4cdee ChangeLog 20435
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -40,9 +36,6 @@ SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata
 MD5 6a01577df5b8434affdc1217be2ba5b1 files/digest-ncurses-5.5-r3 238
 RMD160 755dd213b7e9f190613456f3bc9f419dcbc84271 files/digest-ncurses-5.5-r3 238
 SHA256 f86ecfaaa7faef60ffbc739f005574acbd940ee20502129d8d6c6aa433e1ecee files/digest-ncurses-5.5-r3 238
-MD5 815d6657066cf2f88061b6542dc5bfe0 files/digest-ncurses-5.6 238
-RMD160 dbf4e20e60f6247945ffbefcf00a455920d0c1b1 files/digest-ncurses-5.6 238
-SHA256 aeae266804b5463f9acb8a7ece8f88dfcb520a6b7705011e727b1c0cbe83632d files/digest-ncurses-5.6 238
 MD5 4113e58a2761a788de58821d1058f534 files/digest-ncurses-5.6-r1 500
 RMD160 467579d539f83f3e670698737d5c1a5a2b78a05b files/digest-ncurses-5.6-r1 500
 SHA256 0ebdcdfd302a82613b796db3a2cfce0c7a6319992f7fc9ec80c1301444766042 files/digest-ncurses-5.6-r1 500
