@@ -1,3 +1,0 @@
-MD5 b6593abe1089d6aab1551c105c9300e3 ncurses-5.6.tar.gz 2402592
-RMD160 1a878819c43e6426500fd74ccedf0a032ef399d8 ncurses-5.6.tar.gz 2402592
-SHA256 f9cac2b31683a37d65bc37119599752198a0691e462d0d1a252cf9815f5724d5 ncurses-5.6.tar.gz 2402592
