@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ncurses
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.138 2007/04/10 05:26:01 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.139 2007/04/22 08:44:35 kloeri Exp $
+
+  22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> ncurses-5.6.ebuild:
+  Stable on Mips, bug 173728.
 
   10 Apr 2007; Jeroen Roovers <jer@gentoo.org> ncurses-5.6.ebuild:
   Stable for HPPA (bug #173728).
